--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -272,4 +272,7 @@
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
 }
+button{
+  cursor: pointer;
+}
 
